package org.designPattern.Decorator;

import java.util.List;

// Component
public interface Spada {
	public String getNome();
	public int getDanno();
	public List<String> getEffetti();
}